# SkyBank

./: .env.example  README.md  pyproject.toml  test_data.xls  test_data.xlsx  test_data_empty.xlsx  test_data_no_phones.xlsx  test_settings.json  test_transactions.xlsx
data/: operations.xls  spending_by_category.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_transactions.xlsx  test_utils.py  test_views.py
